// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Consent Banner Container should correctly render cookie banner - LTR layout 1`] = `
.emotion-14 {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 2147483647;
}

.emotion-12 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  border-top: solid 0.0625rem transparent;
}

@media (max-width:24.9375rem) {
  .emotion-12 {
    padding: calc(1rem - 0.0625rem) 0.5rem 0.5rem 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-12 {
    padding: calc(1rem - 0.0625rem) 1rem 0.5rem 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-12 {
    padding: calc(2rem - 0.0625rem) 1rem 2rem 1rem;
  }
}

.emotion-10 {
  max-width: 37.4375rem;
  margin: 0 auto;
}

.emotion-10 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 0.0625rem #AEAEB5;
}

.emotion-10 a:focus,
.emotion-10 a:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-10 a:hover,
.emotion-10 a:focus {
  border-bottom: solid 0.125rem transparent;
}

.emotion-0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-2 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
  color: #BEBEBE;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin-top: 1.5rem;
  }
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-8 li + li {
  margin-top: 0.5rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }

  .emotion-8 li + li {
    margin-top: 0;
  }
}

.emotion-4 {
  text-align: center;
  width: 100%;
  word-break: break-word;
}

.emotion-4 button {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  min-height: 2.75rem;
  color: #222222;
  font-weight: bold;
  background-color: #FDFDFD;
  border: solid 0.0625rem transparent;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 button {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 button {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-4 button:hover,
.emotion-4 button:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 button:focus,
.emotion-4 button:hover {
  color: #222222;
  background-color: #F6A21D;
}

@media (min-width:25rem) {
  .emotion-4 {
    width: 17.3125rem;
  }
}

<div>
  <div
    class="emotion-14 emotion-15"
  >
    <div
      class="emotion-12 emotion-13"
      dir="ltr"
    >
      <div
        class="emotion-10 emotion-11"
        dir="ltr"
      >
        <h2
          class="emotion-0 emotion-1"
          dir="ltr"
        >
          Let us know you agree to cookies
        </h2>
        <p
          class="emotion-2 emotion-3"
          dir="ltr"
        >
          We and our partners use technologies, such as 
          <a
            href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/"
          >
            cookies
          </a>
          , and collect browsing data to give you the best online experience and to personalise the content and advertising shown to you. Please let us know if you agree.
        </p>
        <ul
          class="emotion-8 emotion-9"
          dir="ltr"
          role="list"
        >
          <li
            class="emotion-4 emotion-5"
            dir="ltr"
          >
            <button
              data-cookie-banner="accept"
              type="button"
            >
              Yes, I agree
            </button>
          </li>
          <li
            class="emotion-4 emotion-5"
            dir="ltr"
          >
            <span>
              <a
                data-cookie-banner="reject"
                href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
              >
                No, take me to settings
              </a>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Canonical Consent Banner Container should correctly render cookie banner - RTL layout 1`] = `
.emotion-14 {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 2147483647;
}

.emotion-10 {
  max-width: 37.4375rem;
  margin: 0 auto;
}

.emotion-10 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 0.0625rem #AEAEB5;
}

.emotion-10 a:focus,
.emotion-10 a:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-10 a:hover,
.emotion-10 a:focus {
  border-bottom: solid 0.125rem transparent;
}

.emotion-12 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  border-top: solid 0.0625rem transparent;
}

@media (max-width:24.9375rem) {
  .emotion-12 {
    padding: calc(1rem - 0.0625rem) 0.5rem 0.5rem 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-12 {
    padding: calc(1rem - 0.0625rem) 1rem 0.5rem 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-12 {
    padding: calc(2rem - 0.0625rem) 1rem 2rem 1rem;
  }
}

.emotion-0 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

.emotion-2 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
  color: #BEBEBE;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin-top: 1.5rem;
  }
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

.emotion-8 li + li {
  margin-top: 0.5rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }

  .emotion-8 li + li {
    margin-top: 0;
  }
}

.emotion-4 {
  text-align: center;
  width: 100%;
  word-break: break-word;
}

.emotion-4 button {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  width: 100%;
  min-height: 2.75rem;
  color: #222222;
  font-weight: bold;
  background-color: #FDFDFD;
  border: solid 0.0625rem transparent;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 button {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 button {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

.emotion-4 button:hover,
.emotion-4 button:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 button:focus,
.emotion-4 button:hover {
  color: #222222;
  background-color: #F6A21D;
}

@media (min-width:25rem) {
  .emotion-4 {
    width: 17.3125rem;
  }
}

<div>
  <div
    class="emotion-14 emotion-15"
  >
    <div
      class="emotion-12 emotion-13"
      dir="rtl"
    >
      <div
        class="emotion-10 emotion-11"
        dir="rtl"
      >
        <h2
          class="emotion-0 emotion-1"
          dir="rtl"
        >
          أخبرنا عما إذا كنت توافق على تحميل الكوكيز
        </h2>
        <p
          class="emotion-2 emotion-3"
          dir="rtl"
        >
          نستخدم نحن وشركاؤنا تقنيات مثل 
          <a
            href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/"
          >
            ملفات الارتباط
          </a>
          ، كما نقوم بجمع معلومات خاصة بالتصفح من أجل توفير أفضل خدمة رقمية ولجعل المحتوى والاعلانات، الموجهة إليك، شخصية. الرجاء إعلامنا إذا كنت موافقا على ذلك.
        </p>
        <ul
          class="emotion-8 emotion-9"
          dir="rtl"
          role="list"
        >
          <li
            class="emotion-4 emotion-5"
            dir="rtl"
          >
            <button
              data-cookie-banner="accept"
              type="button"
            >
              نعم، موافق
            </button>
          </li>
          <li
            class="emotion-4 emotion-5"
            dir="rtl"
          >
            <span>
              <a
                data-cookie-banner="reject"
                href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
              >
                كلا، أعدني إلى الإعدادات
              </a>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Canonical Consent Banner Container should correctly render privacy banner - LTR layout 1`] = `
.emotion-14 {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 2147483647;
}

.emotion-12 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  border-top: solid 0.0625rem transparent;
}

@media (max-width:24.9375rem) {
  .emotion-12 {
    padding: calc(1rem - 0.0625rem) 0.5rem 0.5rem 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-12 {
    padding: calc(1rem - 0.0625rem) 1rem 0.5rem 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-12 {
    padding: calc(2rem - 0.0625rem) 1rem 2rem 1rem;
  }
}

.emotion-10 {
  max-width: 37.4375rem;
  margin: 0 auto;
}

.emotion-10 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 0.0625rem #AEAEB5;
}

.emotion-10 a:focus,
.emotion-10 a:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-10 a:hover,
.emotion-10 a:focus {
  border-bottom: solid 0.125rem transparent;
}

.emotion-0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-2 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
  color: #BEBEBE;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin-top: 1.5rem;
  }
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-8 li + li {
  margin-top: 0.5rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }

  .emotion-8 li + li {
    margin-top: 0;
  }
}

.emotion-4 {
  text-align: center;
  width: 100%;
  word-break: break-word;
}

.emotion-4 button {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  min-height: 2.75rem;
  color: #222222;
  font-weight: bold;
  background-color: #FDFDFD;
  border: solid 0.0625rem transparent;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 button {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 button {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-4 button:hover,
.emotion-4 button:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 button:focus,
.emotion-4 button:hover {
  color: #222222;
  background-color: #F6A21D;
}

@media (min-width:25rem) {
  .emotion-4 {
    width: 17.3125rem;
  }
}

<div>
  <div
    class="emotion-14 emotion-15"
  >
    <div
      class="emotion-12 emotion-13"
      dir="ltr"
    >
      <div
        class="emotion-10 emotion-11"
        dir="ltr"
      >
        <h2
          class="emotion-0 emotion-1"
          dir="ltr"
        >
          We've updated our Privacy and Cookies Policy
        </h2>
        <p
          class="emotion-2 emotion-3"
          dir="ltr"
        >
          We've made some important changes to our Privacy and Cookies Policy and we want you to know what this means for you and your data.
        </p>
        <ul
          class="emotion-8 emotion-9"
          dir="ltr"
          role="list"
        >
          <li
            class="emotion-4 emotion-5"
            dir="ltr"
          >
            <button
              type="button"
            >
              OK
            </button>
          </li>
          <li
            class="emotion-4 emotion-5"
            dir="ltr"
          >
            <span>
              <a
                href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
              >
                Find out what's changed
              </a>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Canonical Consent Banner Container should correctly render privacy banner - RTL layout 1`] = `
.emotion-14 {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 2147483647;
}

.emotion-10 {
  max-width: 37.4375rem;
  margin: 0 auto;
}

.emotion-10 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 0.0625rem #AEAEB5;
}

.emotion-10 a:focus,
.emotion-10 a:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-10 a:hover,
.emotion-10 a:focus {
  border-bottom: solid 0.125rem transparent;
}

.emotion-12 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  border-top: solid 0.0625rem transparent;
}

@media (max-width:24.9375rem) {
  .emotion-12 {
    padding: calc(1rem - 0.0625rem) 0.5rem 0.5rem 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-12 {
    padding: calc(1rem - 0.0625rem) 1rem 0.5rem 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-12 {
    padding: calc(2rem - 0.0625rem) 1rem 2rem 1rem;
  }
}

.emotion-0 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

.emotion-2 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
  color: #BEBEBE;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    margin-top: 1.5rem;
  }
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

.emotion-8 li + li {
  margin-top: 0.5rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }

  .emotion-8 li + li {
    margin-top: 0;
  }
}

.emotion-4 {
  text-align: center;
  width: 100%;
  word-break: break-word;
}

.emotion-4 button {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  width: 100%;
  min-height: 2.75rem;
  color: #222222;
  font-weight: bold;
  background-color: #FDFDFD;
  border: solid 0.0625rem transparent;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 button {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 button {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

.emotion-4 button:hover,
.emotion-4 button:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 button:focus,
.emotion-4 button:hover {
  color: #222222;
  background-color: #F6A21D;
}

@media (min-width:25rem) {
  .emotion-4 {
    width: 17.3125rem;
  }
}

<div>
  <div
    class="emotion-14 emotion-15"
  >
    <div
      class="emotion-12 emotion-13"
      dir="rtl"
    >
      <div
        class="emotion-10 emotion-11"
        dir="rtl"
      >
        <h2
          class="emotion-0 emotion-1"
          dir="rtl"
        >
          لقد حدّثنا سياستنا المتعلقة بالخصوصية وبالشروط الخاصة بملفات الارتباط Cookies
        </h2>
        <p
          class="emotion-2 emotion-3"
          dir="rtl"
        >
          لقد أدخلنا تغييرات مهمة على سياستنا المتعلقة بالخصوصية وعلى الشروط الخاصة بملفات الارتباط Cookies، ويهمنا أن تكونوا ملمين بما قد تعني هذه التغييرات بالنسبة لكم ولبياناتكم
        </p>
        <ul
          class="emotion-8 emotion-9"
          dir="rtl"
          role="list"
        >
          <li
            class="emotion-4 emotion-5"
            dir="rtl"
          >
            <button
              type="button"
            >
              موافق
            </button>
          </li>
          <li
            class="emotion-4 emotion-5"
            dir="rtl"
          >
            <span>
              <a
                href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
              >
                إطلع على التغييرات
              </a>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
